--- a/practic.html
+++ b/practic.html
@@ -5,11 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .cool-1{
+           padding: 10px;
+           height: 10px;
+       color: brown;
+        }
+        .cool-2:hover{
+background-color: chartreuse;
+padding: 50px;
+height: 40px;
+        }
+        .cool-3{
+            display: flex solid;
+            color: cyan;
+        }
+    </style>
 </head>
 <body>
     <h1>This is the day of practice</h1>
     <section>
-
+<div class="cool-1">if you wann succec then work heard</div>
+<div class="cool-2">stay hungry stay foolis</div>
+<div class="cool-3">there is nothing then hard working</div>
+<table>
+    <thead>
+        <tbody>
+            alfaj syif 12/12/1999
+        </tbody>
+    </thead>
+</table>
     </section>
+    <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/qRDks3Gh8IY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe<video controls autoplay>
+            <source src="movie.mp4" type="video/mp4">
+            <source src="movie.ogg" type="video/ogg">
+            Your browser does not support the video tag.
+          </video>
+    </div>
+   
 </body>
 </html>
