--- a/practic.html
+++ b/practic.html
@@ -20,6 +20,11 @@ height: 40px;
             display: flex solid;
             color: cyan;
         }
+        .video{
+            padding-left: 200px;
+            margin-left: 300px;
+            margin-top: 100px;
+        }
     </style>
 </head>
 <body>
@@ -28,15 +33,8 @@ height: 40px;
 <div class="cool-1">if you wann succec then work heard</div>
 <div class="cool-2">stay hungry stay foolis</div>
 <div class="cool-3">there is nothing then hard working</div>
-<table>
-    <thead>
-        <tbody>
-            alfaj syif 12/12/1999
-        </tbody>
-    </thead>
-</table>
     </section>
-    <div>
+    <div class="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/qRDks3Gh8IY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe<video controls autoplay>
             <source src="movie.mp4" type="video/mp4">
             <source src="movie.ogg" type="video/ogg">
